fix line height causing text overflow

--- a/frontend/src/components/newpost/styles.css
+++ b/frontend/src/components/newpost/styles.css
@@ -38,6 +38,7 @@
   width: 100% !important;
   display: block !important;
   margin-bottom: 25px !important;
+  line-height: normal !important;
 }
 
 .newPost-toolbar {
