--- a/frontend/src/components/newthread/styles.css
+++ b/frontend/src/components/newthread/styles.css
@@ -45,6 +45,7 @@
   display: block !important;
   margin-top: 10px !important;
   margin-bottom: 25px !important;
+  line-height: normal !important;
 }
 
 .newThread-toolbar {
