--- a/frontend/src/components/post/styles.css
+++ b/frontend/src/components/post/styles.css
@@ -3,11 +3,13 @@
   display: block !important;
   margin-top: 10px !important;
   margin-bottom: 25px !important;
+  line-height: normal !important;
 }
 
 .post-wrapper-read {
   width: 100% !important;
   display: block !important;
+  line-height: normal !important;
 }
 
 .post-editor {
